# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../"
import("$base_root/build/ohos_var.gni")
import("$base_root/test/xts/tools/build/suite.gni")

group("security") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "access_token/AccessTokenTest_Normal_js:ActsAccessTokenApiJSNormalTest",
      "asset",
      "certificate_framework",
      "certificate_manager",
      "cipher/datacipher:datacipher",
      "cryptoFramework",
      "dlp_permission_service:DlpTest",
      "huks_napi_BasicTest:ActsHuksNAPITest",
      "security_component:ActsSecComponentTest",
      "security_huks_basic",
      "security_huks_reformed_test",
    ]
  }
}
