# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("web") {
  testonly = true
  deps = [
    #"DFX:DFXTest",
    "ace_ets_web_dev:ActsAceWebDevTest",
    "ace_ets_web_dev_cloudservice_webController:ActsAceWebDevCloudServiceWebControllerTest",
    "ace_ets_web_dev_cloudservice_webController_enhanced:ActsAceWebDevCloudServiceWebControllerEnhancedTest",
    "ace_ets_web_dev_cloudservice_webController_five:ActsAceWebDevCloudServiceWebControllerFiveTest",
    "ace_ets_web_dev_cloudservice_webController_four:ActsAceWebDevCloudServiceWebControllerFourTest",
    "ace_ets_web_dev_cloudservice_webController_group:ActsAceWebDevCloudServiceWebControllerGroupTest",
    "ace_ets_web_dev_cloudservice_webController_seven:ActsAceWebDevCloudServiceWebControllerSevenTest",
    "ace_ets_web_dev_cloudservice_webController_six:ActsAceWebDevCloudServiceWebControllerSixTest",
    "ace_ets_web_dev_cloudservice_webController_three:ActsAceWebDevCloudServiceWebControllerThreeTest",
    "ace_ets_web_dev_cloudservice_webController_two:ActsAceWebDevCloudServiceWebControllerTwoTest",
    "ace_ets_web_dev_four:ActsAceWebDevFourTest",
    "ace_ets_web_dev_three:ActsAceWebDevThreeTest",
    "ace_ets_web_dev_two:ActsAceWebDevTwoTest",
    "ace_ets_web_dev_webController:ActsAceWebDevWebControllerTest",
    "ace_ets_web_dev_webviewController:ActsAceWebDevWebViewControllerTest",
    "ace_ets_web_dev_webviewControllerError:ActsAceWebDevWebViewContErrorTest",
    "ace_ets_web_enhanced:webEnhancedTest",
    "ace_ets_web_error_code:ActsAceWebErrorCodeTest",
    "ace_ets_web_napis:ActsNativeWebTest",
    "ace_ets_web_scheme_handler_four_napis:ActsNativeWebSchemeHandlerTest",
    "ace_ets_web_scheme_handler_napis:ActsNativeWebSchemeHandlerOneTest",
    "ace_ets_web_scheme_handler_napis_enhance:ActsNativeWebSchemeHandlerEnhanceTest",
    "ace_ets_web_scheme_handler_napis_enhance_two:ActsNativeWebSchemeHandlerEnhanceTwoTest",
    "ace_ets_web_scheme_handler_three_napis:ActsNativeWebSchemeHandlerThreeTest",
    "ace_ets_web_scheme_handler_two_napis:ActsNativeWebSchemeHandlerTwoTest",
    "ace_ets_web_view:ActsAceWebViewTest",
    #"page_interaction:pageInteraction",
    #"web_life_cycle:webLifeCycle",
  ]
}
