# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")

group("aafwk_standard") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "abilitymanager:actsabilitymanagertest",
      "abilitymultiinstance:abilitymultiinstance",
      "actsabilitydelegatorcase:ActsAbilityDelegatorCaseTest",
      "actsabilitydistributetest:ActsAbilityDistributeTest",
      "actsabilitylifecyclestatenew:ActsAbilityLifecycleStateNewTest",
      "actsabilitymanageretstest:ActsAbilityManagerEtsTest",
      "actscalltest:actscalltest",
      "actsdataabilityjs:ActsDataAbilityJsTest",
      "actsstartcomponenttest:actsstartcomponenttest",
      "actsstserviceabilityclientcase:ActsStServiceAbilityClientCaseTest",
      "amsabilitymanager/amsMissionSnapshotTest:ActsAmsMissionSnapshotTest",
      "amsabilitymanager/amsMissionSnapshotTestSingleton:ActsAmsMissionSnapshotTestSingleton",
      "amsabilitymanager/amsMissionSnapshotTestSingletonS:ActsAmsMissionSnapshotTestSingletonS",
      "amscontextualinforquery:amscontextualinforquery",
      "amsdatauriutils:ActsAmsDataUriUtilsTest",
      "amsdisplayIdtest:amsdisplayIdtest",
      "amsgetabilityprocessinfo:amsgetabilityprocessinfo",
      "context:context",
      "featureability:featureability",
      "formmanager:formmanager",
      "newwant:newwant",
      "non_concurrent:non_concurrent",
      "processmultiinstance:processmultiinstance",
      "stage:stage",
      "want:want",
      "zidltest:zidltest",
      "actsusers:actsusers",
      "killprocesswithaccountstage:killprocesswithaccountstage"
    ]
  }
}
