# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

module_output_path = "acts/ActsMindSporeTest"

config("mindspore_config"){
  include_dirs = [ "//third_party/mindspore/" ]
}

ohos_moduletest_suite("ActsMindSporeTest") {
  module_out_path = module_output_path
  sources = [
    "src/ohos_c_api_test_mslite.cpp",
    "src/ohos_common.cpp",
  ]

  configs = [ ":mindspore_config" ]

  external_deps = [ "c_utils:utils" ]
  deps = [
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest",
    "//third_party/mindspore/mindspore/lite:mindspore_lib",
  ]

  subsystem_name = "ai"
  part_name = "mindspore"
}
