import("//test/xts/tools/build/suite.gni")

ohos_js_app_suite("ActsDemoTest") {
  hap_name = "ActsDemoTest"
  testonly = true
  test_hap = true
  part_name = "ets_frontend"
  subsystem_name = "arkcompiler"
  certificate_profile = "./signature/auto_ohos_default_DemoTest_com.demo.acts.p7b"
}
