# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/arkui/ace_engine/ace_config.gni")

group("componentAdvancedTest") {
  testonly = true
  if (is_standard_system) {
    if (ace_engine_feature_enable_digital_crown) {
      deps = [ "ace_ets_component_advanced_picker:componentPickerTest" ]
    } else {
      deps = [
        "ace_ets_component_advanced_arcalphabetindexer:componentArcAlphabetIndexerTest",
        "ace_ets_component_advanced_arcbutton:componentArcButtonTest",
        "ace_ets_component_advanced_arclist:componentArcListTest",
        "ace_ets_component_advanced_chip:componentChipTest",
        "ace_ets_component_advanced_list:componentListTest",
      ]
    }
  }
}
