# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("componentAttrssTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "ace_ets_component_common_attrss_alignRules:ActsAceEtsComponentCommonAttrsAlignRulesTest",
      "ace_ets_component_common_attrss_aspectRatio:ActsAceEtsComponentCommonAttrsAspectRadioTest",
      "ace_ets_component_common_attrss_constraintSize:ActsAceEtsComponentCommonAttrsConstraintSizeTest",
      "ace_ets_component_common_attrss_default:ActsAceEtsComponentCommonAttrsDefaultTest",
      "ace_ets_component_common_attrss_defaultFocus:ActsAceEtsComponentCommonAttrsdefaultFocusTest",
      "ace_ets_component_common_attrss_displayPriority:ActsAceEtsComponentCommondisplayPriorityTest",
      "ace_ets_component_common_attrss_enabled:ActsAceEtsComponentCommonenabledTest",
      "ace_ets_component_common_attrss_flex:ActsAceEtsComponentCommonflexTest",
      "ace_ets_component_common_attrss_flex_three:ActsAceEtsComponentCommonflexThreeTest",
      "ace_ets_component_common_attrss_flex_two:ActsAceEtsComponentCommonflexTestTwo",
      "ace_ets_component_common_attrss_focusControl:ActsAceEtsComponentCommonAttrsFocusControlTest",
      "ace_ets_component_common_attrss_focusOnTouch:ActsAceEtsComponentCommonAttrsFocusOnTouchTest",
      "ace_ets_component_common_attrss_focusable:ActsAceEtsComponentCommonfocusableTest",
      "ace_ets_component_common_attrss_focusableDefault:ActsAceEtsComponentCommonAttrsFocusableDefaultTest",
      "ace_ets_component_common_attrss_gridOffset:ActsAceEtsComponentCommonAttrsGridOffsetTest",
      "ace_ets_component_common_attrss_gridSpan:ActsAceEtsComponentCommonAttrsGridSpanTest",
      "ace_ets_component_common_attrss_groupDefaultFocus:ActsAceEtsComponentCommonAttrsGroupDefaultFocusTest",
      "ace_ets_component_common_attrss_height:ActsAceEtsComponentCommonAttrsHeightTest",
      "ace_ets_component_common_attrss_hitTestBehavior:ActsAceEtsComponentCommonAttrsHitTestBehaviorTest",
      "ace_ets_component_common_attrss_layoutWeight:ActsAceEtsComponentCommonAttrsLayoutWeightTest",
      "ace_ets_component_common_attrss_margin:ActsAceEtsComponentCommonAttrsMarginTest",
      "ace_ets_component_common_attrss_marginLength:ActsAceEtsComponentCommonAttrsMarginLengthTest",
      "ace_ets_component_common_attrss_markAnchor:ActsAceEtsComponentCommonAttrsMarkAnchorTest",
      "ace_ets_component_common_attrss_offset:ActsAceEtsComponentCommonAttrsOffsetTest",
      "ace_ets_component_common_attrss_onAppear:ActsAceEtsComponentCommonAttrsOnAppearTest",
      "ace_ets_component_common_attrss_onAreaChange:ActsAceEtsComponentCommonAttrsOnAreaChangeTest",
      "ace_ets_component_common_attrss_onDisAppear:ActsAceEtsComponentCommonAttrsOnDisAppearTest",
      "ace_ets_component_common_attrss_onVisibleAreaChange:ActsAceEtsComponentCommonAttrsOnVisibleAreaChangeTest",
      "ace_ets_component_common_attrss_padding:ActsAceEtsComponentCommonAttrsPaddingTest",
      "ace_ets_component_common_attrss_position:ActsAceEtsComponentCommonAttrsPositionTest",
      "ace_ets_component_common_attrss_responseRegion:ActsAceEtsComponentCommonAttrsResponseRegionTest",
      "ace_ets_component_common_attrss_size:ActsAceEtsComponentCommonAttrsSizeTest",
      "ace_ets_component_common_attrss_stateStyles:ActsAceEtsComponentCommonAttrsStateStylesTest",
      "ace_ets_component_common_attrss_tabIndex:ActsAceEtsComponentCommonAttrsTabIndexTest",
      "ace_ets_component_common_attrss_touchable:ActsAceEtsComponentCommonAttrsTouchableTest",
      "ace_ets_component_common_attrss_useSizeType:ActsAceEtsComponentCommonAttrsUseSizeTypeTest",
      "ace_ets_component_common_attrss_visibility:ActsAceEtsComponentCommonAttrsVisibilityTest",
      "ace_ets_component_common_attrss_width:ActsAceEtsComponentCommonAttrsWidthTest",
      "ace_ets_component_common_attrss_zIndex:ActsAceEtsComponentCommonAttrsZIndexTest",
    ]
  }
}
